--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
   "minimum-stability": "stable",
   "require": {
     "php": "^8.2",
-    "php-di/php-di": "^7.0"
+    "php-di/php-di": "^7.0",
+    "symfony/console": "^7.1"
   }
 }
